DotNetObject.SendNativeMethod, .SendNativeStaticMethod with tests
DotNetObject.SendMessage (WIP)
bytecode .Send manage native object or IObject

2010-09-12
subclass:nativeType: support in test, DoesNotUnderstand
new example test NativeBahevior.st
IMetaClass
BaseMetaClass
BaseBehaviorTests
new example test NativeFileInfo.st
BaseIndexedObjectTests
BehabiorDoesNotUnderstandMethod
.Superclass as IBehavior

2010-09-18
class methods support in Loader
new and class in DoesNotUnderstandMethod
new example DefineRectangleWithNewAndInitialize.st
DoesNotUnderstandMethod and BehaviorDoesNotUnderstandMethod now in core, and in Machine
AjTalk.Gui with first Transcript
Refactor of ByteCode processing (WIP)

2010-09-19
Add ; (semicolon) support in lexer, parser, with tests
Message
MessageQueue with tests
AgentObject with tests
agent: support in nil, BehaviorDoesNotUnderstand

2010-09-25
minimal Browser in AjTalk.Gui (WIP)
Boot.st in AjTalk.Gui
ClassDescriptor.ToDefineString
IClass.Category
IClassDescription.GetInstanceVariableNames
IClassDescription.GetClassVariableNames
Move BaseClassDescription.classvariablenames to MetaClass

2010-09-26
Fix BaseClass.ToDefineString
Show class define in Browser
Refactoring Loader
Todo.txt

2010-10-10
BaseClass.ToOutputString() with tests
BaseObject Serializable, ISerialize implements, with tests
Hosting namespace
IHost interface
Host with first tests
ObjectProxy WIP
RemotingHostServer, RemotingHostClient, ClientObject, with tests

2010-10-11
Support in DotNativeObject for set properties, with tests
Now, Method accepts IBehavior instead IClassDescription in constructor
New example NativeRectangle.st with tests
TypeUtilities for resolve types using .AsType(string). Type.GetType() only works in the calling assembly
Fixing lexer bug: !new) now is two tokens !new and )
RemotingHostServer.st example with tests
RemotingHostClient.st example with tests

AgentObj

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/